<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable name="vm" type="com.theboringdevelopers.smartmurmansk.activity.enter.code.CodeViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backBtn"
            android:src="@drawable/ic_back"
            android:padding="10dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="@{vm::back}"
            android:layout_margin="13dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textLogin"
            style="@style/Text24sp.SemiBold"
            android:layout_marginTop="39dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/write_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backBtn" />

        <TextView
            android:id="@+id/welcomeTwoText"
            android:layout_width="0dp"
            style="@style/Text16sp.Grey"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/write_code_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textLogin" />

        <com.fraggjkee.smsconfirmationview.SmsConfirmationView
            android:id="@+id/sms_code_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeTwoText"
            app:scv_symbolBorderActiveColor="@color/blue"
            app:scv_symbolWidth="80dp"
            app:scv_symbolHeight="80dp"
            app:scv_symbolTextColor="@color/select"
            app:scv_symbolTextSize="32sp"
            app:scv_symbolTextFont="@font/manrope_semibold"
            app:scv_symbolBackgroundColor="@color/grey_light"
            app:scv_symbolBorderWidth="1dp"
            app:scv_symbolBorderCornerRadius="16dp"
            app:scv_codeLength="4"
            />

        <TextView
            android:id="@+id/retryCodeTW"
            style="@style/Text14sp.Blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:text="@string/retry_code"
            android:textColorHint="@color/grey_medium"
            app:layout_constraintBottom_toTopOf="@+id/bottomL" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <Button
            android:id="@+id/button"
            style="@style/Button"
            android:layout_height="56dp"
            android:text="@string/continue_arrow_button"
            android:visibility="@{vm.data.progress ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:indeterminateTint="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="3dp"
            android:visibility="@{vm.data.progress ? View.VISIBLE : View.GONE}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>