<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable name="vm" type="com.theboringdevelopers.smartmurmansk.activity.enter.phone.PhoneViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backBtn"
            android:src="@drawable/ic_back"
            android:padding="10dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="@{vm::back}"
            android:layout_margin="13dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textLogin"
            style="@style/Text24sp.SemiBold"
            android:layout_marginTop="49dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/welcome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backBtn" />

        <TextView
            android:id="@+id/welcomeTwoText"
            style="@style/Text16sp.Grey"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/write_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textLogin" />

        <TextView
            android:id="@+id/phoneTW"
            style="@style/Text32sp.SemiBold.GrayMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_mask"
            android:textColorHint="@color/grey_medium"
            android:layout_marginTop="36dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/welcomeTwoText" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneET"
            style="@style/Text32sp.SemiBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/grey_medium"
            android:layout_marginTop="36dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@={vm.data.login}"
            android:imeOptions="actionDone"
            android:background="@android:color/transparent"
            android:inputType="phone"
            app:layout_constraintTop_toBottomOf="@id/welcomeTwoText" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneET">

            <TextView
                style="@style/TextSmall.Grey"
                android:text="@string/login_with"
                android:textColor="@color/unselect"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageView
                android:id="@+id/gosuslugiIV"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:src="@mipmap/gosuslugi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:civ_circle_background_color="@color/blue_secondary"/>

            <ImageView
                android:id="@+id/yandexIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_yandex"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@id/gosuslugiIV"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:civ_circle_background_color="@color/blue_secondary" />

            <ImageView
                android:id="@+id/vkIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_vk"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@id/yandexIV"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:civ_circle_background_color="@color/blue_secondary" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:indeterminateTint="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="27dp"
            android:visibility="@{vm.data.progress ? View.VISIBLE : View.GONE}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            style="@style/Button"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:layout_height="56dp"
            android:text="@string/login_to_acc"
            android:visibility="@{vm.data.progress ? View.GONE : View.VISIBLE}"
            android:onClick="@{vm::login}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>