<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable name="vm" type="com.theboringdevelopers.smartmurmansk.activity.main.team.CreateTeamViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/avatarIv"
                        android:layout_width="52dp"
                        android:layout_height="52dp"
                        tools:src="@color/blue"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <TextView
                        android:id="@+id/nameTv"
                        android:layout_marginStart="20dp"
                        style="@style/Text16sp"
                        tools:text="Анна Белякова"
                        android:layout_marginTop="5dp"
                        app:layout_constraintTop_toTopOf="@id/avatarIv"
                        app:layout_constraintStart_toEndOf="@id/avatarIv"/>

                    <TextView
                        android:id="@+id/roleTv"
                        android:layout_marginStart="20dp"
                        style="@style/Text14sp.Grey"
                        tools:text="капитан команды"
                        android:layout_marginBottom="5dp"
                        app:layout_constraintBottom_toBottomOf="@id/avatarIv"
                        app:layout_constraintStart_toEndOf="@id/avatarIv"/>



                </androidx.constraintlayout.widget.ConstraintLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUsername"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:padding="16dp"
                        android:text="@={vm.data.name}"
                        android:background="@drawable/bg_edittext"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:textColorHint="@color/unselect"
                        android:hint="@string/name_of_team"/>

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="118dp"
                    android:paddingTop="12dp"
                    android:onClick="@{vm::selectSports}"
                    android:paddingBottom="12dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_circle"
                    android:backgroundTint="@color/grey_light">

                    <TextView
                        android:id="@+id/sportTypeTv"
                        style="@style/Text14sp"
                        android:text="Спортивные компетенции"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        style="@style/TextSmall"
                        android:textColor="@color/unselect"
                        app:layout_constraintTop_toBottomOf="@id/sportTypeTv"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="4dp"
                        android:text="минимум 6 человек в команде"/>


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="wrap_content"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_height="match_parent"/>
                        
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_right"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="136dp"
                    android:padding="16dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/description_team"
                    android:background="@drawable/bg_edittext"
                    app:expandedHintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@={vm.data.description}"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:textColorHint="@color/unselect"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/grey_light"
                    android:background="@drawable/bg_circle"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Text14sp"
                        android:text="Корпоративная команда"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"/>

                    <com.suke.widget.SwitchButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="16dp"
                        android:checked="@{vm.data.organization}"
                        android:onClick="@{vm::org}"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{vm.data.organization ? View.VISIBLE : View.GONE}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@={vm.data.name}"
                        android:background="@drawable/bg_edittext"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:textColorHint="@color/unselect"
                        android:hint="@string/name_of_org"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
        <Button
            style="@style/Button"
            android:layout_height="56dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/create"
            android:onClick="@{vm::create}"
            android:layout_margin="24dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>